Changes to add role section in signup

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -63,6 +63,17 @@
                         </select>
                     </div>
 
+                    <!-- Role Dropdown -->
+                    <div class="form-group">
+                        <label for="role">Role</label>
+                        <select id="role" name="role" required>
+                            <option value="">-- Select Role --</option>
+                            <option value="ASHA">ASHA</option>
+                            <option value="DCMO">DCMO</option>
+                            <option value="SCMO">SCMO</option>
+                        </select>
+                    </div>
+
                     <!-- Username -->
                     <div class="form-group">
                         <label for="signupUsername">Username</label>
